#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Committed w/o tag
2018-11-27 Mikhail S. Dubrovin
- update for app/epix10ka_pedestals_calibration - multipanel version
	modified:   app/epix10ka_deploy_constants
	modified:   app/epix10ka_pedestals_calibration
	modified:   src/UtilsEpix10kaCalib.py

Committed w/o tag
2018-11-27 Mikhail S. Dubrovin
- update for app/epix10ka_deploy_constants
	modified:   app/epix10ka_deploy_constants
	modified:   src/UtilsEpix.py
	modified:   src/UtilsEpix10kaCalib.py

Committed w/o tag to let Chris work on problem with fitting.
2018-11-26 Mikhail S. Dubrovin
- work on epix10ka2m calibration in progress
 	modified:   app/epix10ka_deploy_constants
 	modified:   app/epix10ka_id
 	modified:   app/epix10ka_offset_calibration
 	modified:   examples/ex_epix10ka2m_config.py
 	modified:   examples/ex_epix10ka2m_ipython.py
 	modified:   examples/ex_epix10ka_images.py
 	modified:   examples/ex_new_dets.py
 	modified:   examples/ex_source_dsname.py
 	modified:   src/UtilsEpix.py
 	modified:   src/UtilsEpix10ka.py
 	modified:   src/UtilsEpix10ka2M.py
 	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-58
2018-11-16 Mikhail S. Dubrovin
- restore removed import
- fix pedestals averaging in UtilsEpix10kaCalib.py
	new file:   examples/ex_epix10ka_plot_in_evloop.py
	modified:   examples/ex_new_dets.py
	modified:   examples/ex_source_dsname.py
	modified:   src/UtilsEpix.py
	modified:   src/UtilsEpix10ka.py
	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-57
2018-11-14 Mikhail S. Dubrovin
- implement calib_epix10ka supporting composite detectors epix10ka2m and epix10kaquad
	modified:   app/epix10ka_deploy_constants
	modified:   app/epix10ka_offset_calibration