@@ -51,7 +51,7 @@ def usage(mode=0) :
            '\nREGULAR COMMAND:'\
            '\n  %prog -e mfxx32516 -d NoDetector.0:Epix10ka.3 -r 1021 -L INFO'\
            '\n  %prog -e detdaq17 -d DetLab.0:Epix10ka2M.0 -r 129 -i 11'\
-           '\n  %prog -e xcsx35617 -d XcsEndstation.0:Epix10ka2M.0 -r6 --idx=1 --nspace=4 -o ./work' 
+           '\n  %prog -e xcsx35617 -d XcsEndstation.0:Epix10ka2M.0 -r6 --idx=1 --nspace=4 -o ./work    -P -S'
 
 #------------------------------
 
@@ -68,6 +68,9 @@ def option_parser() :
     d_dirrepo = CALIB_REPO_EPIX10KA # './myrepo' 
     d_display = True
     d_logmode = 'DEBUG'
+    d_dopeds  = True
+    d_dooffs  = True
+    d_usesmd  = True
 
     h_exp     = 'experiment name, default = %s' % d_exp
     h_det     = 'detector name, default = %s' % d_det
@@ -79,6 +82,9 @@ def option_parser() :
     h_dirrepo = 'repository for calibration results, default = %s' % d_dirrepo
     h_display = 'turn off graphical display, default = %s' % d_display
     h_logmode = 'logging mode, one of %s, default = %s' % (STR_LEVEL_NAMES, d_logmode)
+    h_dopeds  = 'do pedestals evaluation, default = %s' % d_dopeds
+    h_dooffs  = 'do offset evaluation, default = %s' % d_dooffs
+    h_usesmd  = 'add "smd" in dataset string, default = %s' % d_usesmd
 
     parser = OptionParser(description=usage(1), usage = usage())
     parser.add_option('-e', '--exp',     default=d_exp,     action='store', type='string', help=h_exp)
@@ -91,6 +97,9 @@ def option_parser() :
     parser.add_option('-o', '--dirrepo', default=d_dirrepo, action='store', type='string', help=h_dirrepo)
     parser.add_option('-p', '--display', default=d_display, action='store_false',          help=h_display)
     parser.add_option('-L', '--logmode', default=d_logmode, action='store', type='string', help=h_logmode)
+    parser.add_option('-P', '--dopeds',  default=d_dopeds,  action='store_false',          help=h_dopeds)
+    parser.add_option('-O', '--dooffs',  default=d_dooffs,  action='store_false',          help=h_dooffs)
+    parser.add_option('-S', '--usesmd',  default=d_usesmd,  action='store_false',          help=h_usesmd)
 
     return parser
 
